--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.11",
+    "clsx": "^1.2.1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
