appveyor build=>.next

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,4 +22,4 @@ deploy_script:
   - git config --global user.name AppVeyor
   - git config --global user.email ci@appveyor.com
   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
-  - npx push-dir --dir=build --branch=gh-pages --force --verbose
+  - npx push-dir --dir=.next --branch=gh-pages --force --verbose
