--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.11",
+    "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "next": "13.0.0",
     "react": "18.2.0",
