--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.11",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "dotenv": "^16.0.3",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
