--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.11",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
