feat(.eslintrc.json)added security eslint configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,33 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "plugins": [
+    "react",
+    "react-security",
+    "no-unsanitized",
+    "anti-trojan-source"
+  ],
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es6": true,
+    "jest": true,
+    "node": true
+  },
+  "rules": {
+    // https://github.com/lirantal/eslint-plugin-anti-trojan-source
+    "anti-trojan-source/no-bidi": "warn",
+    // https://github.com/yannickcr/eslint-plugin-react/tree/master/docs/rules
+    "react/no-danger": "warn",
+    "react/jsx-no-script-url": "warn",
+    "react/jsx-no-target-blank": "warn",
+    "react/jsx-props-no-spreading": "warn",
+    // https://github.com/snyk-labs/eslint-plugin-react-security
+    "react-security/no-find-dom-node": "warn",
+    "react-security/no-dangerously-set-innerhtml": "warn",
+    "react-security/no-javascript-urls": "off",
+    "react-security/no-refs": "warn",
+    // https://github.com/mozilla/eslint-plugin-no-unsanitized
+    "no-unsanitized/method": "warn",
+    "no-unsanitized/property": "warn"
+  }
 }
