--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@types/react-dom": "18.0.7",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "eslint-plugin-anti-trojan-source": "^1.1.0",
+    "eslint-plugin-no-unsanitized": "^4.0.1",
+    "eslint-plugin-react-security": "github:snyk-labs/eslint-plugin-react-security",
     "prettier": "2.7.1",
     "typescript": "4.8.4"
   }
