--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
+    "html-react-parser": "^1.4.12",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
